--- a/routes/swagger-paths/events.yaml
+++ b/routes/swagger-paths/events.yaml
@@ -18,6 +18,7 @@
     summary: Create a new event
     security:
       - googleAuth: []
+      - bearerAuth: []
     requestBody:
       required: true
       content:
@@ -57,6 +58,7 @@
     summary: Delete an event
     security:
       - googleAuth: []
+      - bearerAuth: []
     parameters:
       - in: path
         name: id
