--- a/routes/swagger-paths/users.yaml
+++ b/routes/swagger-paths/users.yaml
@@ -49,6 +49,33 @@
         description: Server error
 
 /users/{id}:
+  get:
+    tags:
+      - Users
+    summary: Get a single user by ID
+    description: Returns a single user object based on the provided MongoDB ID.
+    security:
+      - bearerAuth: []
+    parameters:
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: string
+        description: The unique MongoDB ID of the user to retrieve.
+    responses:
+      '200':
+        description: A successful response returning the user object.
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/User'
+      '400':
+        description: Invalid User ID format.
+      '404':
+        description: User not found.
+      '500':
+        description: Server error while fetching user.
   put:
     tags:
       - Users
