final project updates

--- a/routes/swagger-paths/events.yaml
+++ b/routes/swagger-paths/events.yaml
@@ -60,7 +60,7 @@
       - Events
     summary: Update an existing event
     security:
-      - googleAuth: []
+      - bearerAuth: []
     parameters:
       - in: path
         name: id
